--- a/conf/app.ini
+++ b/conf/app.ini
@@ -1,12 +1,11 @@
-RUN_MODE = debug
-
 [app]
-PAGE_SIZE = 10
+PageSize = 10
 
 [server]
-HTTP_PORT = 8080
-READ_TIMEOUT = 60
-WRITE_TIMEOUT = 60
+RunMode = debug
+HttpPort = 8080
+ReadTimeout = 60
+WriteTimeout = 60
 
 [database]
 Type = mysql
@@ -15,3 +14,10 @@ Password = jihite2018
 Host = 127.0.0.1:3306
 Name = blog
 TablePrefix = blog_
+
+[redis]
+Host = 127.0.0.1:6379
+Password =
+MaxIdle = 30
+MaxActive = 30
+IdleTimeout = 200
