--- a/conf/app.ini
+++ b/conf/app.ini
@@ -1,5 +1,23 @@
 [app]
 PageSize = 10
+JwtSecret = 233
+PrefixUrl = http://127.0.0.1:8000
+
+RuntimeRootPath = runtime/
+
+ImageSavePath = upload/images/
+# MB
+ImageMaxSize = 5
+ImageAllowExts = .jpg,.jpeg,.png
+
+ExportSavePath = export/
+QrCodeSavePath = qrcode/
+FontSavePath = fonts/
+
+LogSavePath = logs/
+LogSaveName = log
+LogFileExt = log
+TimeFormat = 20060102
 
 [server]
 RunMode = debug
